@@ -1,3 +1,9 @@
+Mon Nov 16 16:28:30 2015  Akinori MUSHA  <knu@iDaemons.org>
+
+	* lib/set.rb (Hash#flatten!, #add?, #delete?, #collect!, #reject!,
+	  #select!, #^, #classify): Micro-optimize some methods for
+	  performance and readability.
+
 Mon Nov 16 16:17:58 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
 
 	* ChangeLog: fixed accidentally commit.
